--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
@@ -18,33 +14,29 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link
-        rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
 
     <link rel="stylesheet" href="./assets/styles.css" />
     <title>This Week's Weather</title>
   </head>
 
   <body>
-    <header class="jumbotron">
-      <h1 class="display-3">This Week's Weather</h1>
+    <header>
+      <h1>This Week's Weather</h1>
       <p id="currentDay" class="lead"></p>
       <p id ="date-my"></p>
     </header>
 
 <container>
     <section id="search-section">
-
+        <input type="text" id="city-search">
     </section>
 
     <section id = "display">
         <div id="display-today">
-            
+            <h2 id="city-name-display">Chicago</h2>
         </div>
         <div id="display-week">
-
+            
         </div>
     </section>
 
