lat/lon call working

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 <container>
     <section id="search-section">
-        <input type="text" id="city-search">
+        <input placeholder="Input a location" type="text" id="city-search">
+        <button id="submit-button">Search</button>
     </section>
 
     <section id = "display">
