future-weather blocks structure

--- a/index.html
+++ b/index.html
@@ -34,10 +34,34 @@
 
     <section id = "display">
         <div id="display-today">
-            <h2 id="city-name-display">Chicago</h2>
+            <h2 id="city-name-display">Placeholder</h2>
         </div>
         <div id="display-week">
-            
+            <div class="week-block">
+                <h3>Date</h3>
+                    <p>Temp: </p>
+                    <p>Humidity: </p>
+            </div>
+            <div class="week-block">
+                <h3>Date</h3>
+                <p>Temp: </p>
+                <p>Humidity: </p>
+            </div>
+            <div class="week-block">
+                <h3>Date</h3>
+                <p>Temp: </p>
+                <p>Humidity: </p>
+            </div>
+            <div class="week-block">
+                <h3>Date</h3>
+                <p>Temp: </p>
+                <p>Humidity: </p>
+            </div>
+            <div class="week-block">
+                <h3>Date</h3>
+                <p>Temp: </p>
+                <p>Humidity: </p>
+            </div>
         </div>
     </section>
 
