all display except for icon for conditions working

--- a/index.html
+++ b/index.html
@@ -34,33 +34,39 @@
 
     <section id = "display">
         <div id="display-today">
-            <h2 id="city-name-display">Placeholder</h2>
+            <h2 id="city-name-display">City</h2>
+            <p id="current-temp">Temperature: </p>
+            <p id="current-humidity">Humidity: </p>
+            <p id="current-wind-speed">Wind Speed: </p>
+            <div id="uv-container">
+            <p id="current-UV-index">UV Index: </p>
+            </div>
         </div>
         <div id="display-week">
             <div class="week-block">
-                <h3>Date</h3>
-                    <p>Temp: </p>
-                    <p>Humidity: </p>
+                <h3 id="day1-date">Date</h3>
+                    <p id="day1-temp">Temp: </p>
+                    <p id="day1-hum">Humidity: </p>
             </div>
             <div class="week-block">
-                <h3>Date</h3>
-                <p>Temp: </p>
-                <p>Humidity: </p>
+                <h3 id="day2-date">Date</h3>
+                <p id="day2-temp">Temp: </p>
+                <p id="day2-hum">Humidity: </p>
             </div>
             <div class="week-block">
-                <h3>Date</h3>
-                <p>Temp: </p>
-                <p>Humidity: </p>
+                <h3 id="day3-date">Date</h3>
+                <p id="day3-temp">Temp: </p>
+                <p id="day3-hum">Humidity: </p>
             </div>
             <div class="week-block">
-                <h3>Date</h3>
-                <p>Temp: </p>
-                <p>Humidity: </p>
+                <h3 id="day4-date">Date</h3>
+                <p id="day4-temp">Temp: </p>
+                <p id="day4-hum">Humidity: </p>
             </div>
             <div class="week-block">
-                <h3>Date</h3>
-                <p>Temp: </p>
-                <p>Humidity: </p>
+                <h3 id="day5-date">Date</h3>
+                <p id="day5-temp">Temp: </p>
+                <p id="day5-hum">Humidity: </p>
             </div>
         </div>
     </section>
