previous searched cities displaying

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <section id="search-section">
         <input placeholder="Input a location" type="text" id="city-search">
         <button id="submit-button">Search</button>
+        <h3>Previous</h3>
     </section>
 
     <section id = "display">
