weather icons working

--- a/index.html
+++ b/index.html
@@ -42,32 +42,38 @@
             <div id="uv-container">
             <p id="current-UV-index">UV Index: </p>
             </div>
+            <img id="current-outlook">
         </div>
         <div id="display-week">
             <div class="week-block">
                 <h3 id="day1-date">Date</h3>
                     <p id="day1-temp">Temp: </p>
                     <p id="day1-hum">Humidity: </p>
+                    <img id="day1-outlook">
             </div>
             <div class="week-block">
                 <h3 id="day2-date">Date</h3>
-                <p id="day2-temp">Temp: </p>
-                <p id="day2-hum">Humidity: </p>
+                    <p id="day2-temp">Temp: </p>
+                    <p id="day2-hum">Humidity: </p>
+                    <img id="day2-outlook">
             </div>
             <div class="week-block">
                 <h3 id="day3-date">Date</h3>
-                <p id="day3-temp">Temp: </p>
-                <p id="day3-hum">Humidity: </p>
+                    <p id="day3-temp">Temp: </p>
+                    <p id="day3-hum">Humidity: </p>
+                    <img id="day3-outlook">
             </div>
             <div class="week-block">
                 <h3 id="day4-date">Date</h3>
-                <p id="day4-temp">Temp: </p>
-                <p id="day4-hum">Humidity: </p>
+                    <p id="day4-temp">Temp: </p>
+                    <p id="day4-hum">Humidity: </p>
+                    <img id="day4-outlook">
             </div>
             <div class="week-block">
                 <h3 id="day5-date">Date</h3>
-                <p id="day5-temp">Temp: </p>
-                <p id="day5-hum">Humidity: </p>
+                    <p id="day5-temp">Temp: </p>
+                    <p id="day5-hum">Humidity: </p>
+                    <img id="day5-outlook">
             </div>
         </div>
     </section>
